--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -19,6 +19,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: subosito/flutter-action@v2
+        with:
+          cache: true
 
       - name: Install dependencies
         run: flutter pub get
