--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,22 +4,23 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: ^3.3.0
+  flutter: ^3.19.0
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  equations: ^4.1.0
+  equations: ^5.0.2
   tuple: ^2.0.0
   path: ^1.8.0
   dolumns: ^2.0.0
-  google_fonts: ^3.0.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
